<resources>
    <string name="app_name">FinalProject</string>

    <string name="search_name">Insert your choice</string>
    <string name="search_buttom">Search Recipe</string>
    <string name="recipe_title">recipe title</string>

    <string name="liao">Mingjiong Liao  liao0019@algonquinlive.com</string>
    <string name="wang">Qing Wang       wang0582@algonquinlive.com</string>
    <string name="ye">Rongzhong Ye    ye000038@algonquinlive.com</string>
    <string name="luo">Chunyuan Luo    luo00047@algonquinlive.com</string>

    <string name="buttontostudentinformation">Click to get student information</string>
    <string name="authorname">Author\'s name: Chunyuan Luo</string>
    <string name="activityversionnumber">Activity version number: v1.0</string>
    <string name="instruction">Instruction: insert your choise such as steak, beef. And click on SEARCH RECIPE botton for list of recipe containing your choice</string>


    <string name="Button">Student information</string>
    <string name="currency">Foreign currency conversion</string>
    <string name="convert">convert</string>
    <string name="insert">save to history</string>
    <string name="amount">Enter amount</string>
    <string name="result">Result</string>
    <string name="country_prompt">Choose currency</string>
    <string name="country_transfer">Choose currency you want to transfer</string>
    <string name="update">update</string>
    <string name="Deletefavoriterecipe">Delete</string>
    <string name="SaveToFavorite">SaveToFavorite</string>
    <string name="favcurrency">favcurrency</string>
    <string name="home">home</string>
    <string name="delete">delete</string>
    <string name="dollar">dollar</string>
    <string name="email">email</string>
    <string name="twiter">twiter</string>
    <string name="help">help</string>
    <string name="headlines">News Api.org headlines</string>.
    <string name="finder">Electric Car Charging Station finder</string>
    <string name="engine">Recipe search engine</string>

    <string name="contact">contact</string>
    <string name="search">search</string>
    <string name="version">version: 2.0</string>
    <string name="us">us</string>
    <string name="dialog">dialog</string>
    <string-array name="spinner1">
        <item>CAD</item>
        <item>USD</item>
        <item>CNY</item>
        <item>HKD</item>
        <item>JPY</item>
        <item>EUR</item>
    </string-array>
    <string name="intruction">Intruction:</string>
    <string name="information">The first line is toolbar! Click the home icon, which can return to main menu. The
        dollar icon can go to the new page which will show the rate that 1 dollar transfer to other currency. The email icon can
        edit a message which can sent to other user. The twitter icon can connect http to twitter\'s home page. Choose the currency
        in spinner, enter amount in editText and choose second currency,  and then click button "convert", which will calulate the
        result from api. If you want to save the result, click the "save to history" button, which will store to database and when the
        user open it secondly, it will show again!</string>


    <string name="newsapi">News Api.org headlines:</string>
    <string name="currencymain">currency:</string>
    <string name="electricmain">Electric Car Charging Station finder:</string>
    <string name="logintorecipe">RECIPE SEARCH ENGIN:</string>Name

    <string name="Name">Name:</string>
    <string name="latitude">latitude</string>
    <string name="longitude">longitude</string>
    <string name="electric_car_charging_station_finder" translatable="false">Electric Car Charging Station finder</string>
    <string name="input_here">Input here:</string>
    <string name="find">Find</string>
    <string name="s1"><![CDATA[Input a latitude & longitude, Get your list of location]]></string>
    <string name="s2">Welcome to Electric Car Charging Station Finder</string>
    <string name="s3">There is not station for this location</string>
    <string name="s4">List of Stations for this Location</string>
    <string name="s5">This is information about our team member</string>
    <string name="s6">Do you want to go there?</string>
    <string name="s7">Yes</string>
    <string name="s8">Cancel</string>
    <string name="s9">You will get into Electric Car Charging Station finder activity that is created by Mingjiong</string>
    <string name="s10">Are you sure you will get in?</string>
    <string name="s12">We are processing</string>
    <string name="s11">Yes</string>
    <string name="s13">Cancel</string>
    <string name="what_is_your_new_message">This is the Version 5.23. \n Author: Mingjiong Liao \n How to use it? \n Just input the latitude and longitude of your desination, and Get your list of location. if you want to know exactly of the location, click the google map icon to get the detals. that is it!</string>
    <string name="news_Name">Name:</string>
    <string name="news_menu_help">help</string>
    <string name="news_menu_news">News</string>
    <string name="news_go_favorites">Go to favorites</string>
    <string name="firstline">welcome to news search</string>
    <string name="search_news">Type search title</string>
    <string name="searchnewsbutton">Search</string>
    <string name="news_title">News Title</string>
    <string name="news_goback">goback</string>
    <string name="news_help">2019 finalProject-NewsApi</string>
    <string name="news_search1">Type tile to start search</string>
    <string name="news_search2">Select item from the list to view content</string>
    <string name="news_search3">choose to view saved articles</string>
    <string name="news_detail">News Detail</string>
    <string name="news_saveTo_favorite">Save to favorite</string>
    <string name="news_go_to_web">Open news webpage</string>
</resources>
