<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/country_prompt"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />
    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/spinner1"
        android:id="@+id/spinner1"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/input"
        android:hint="@string/amount"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/country_transfer"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />
    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/spinner1"
        android:id="@+id/spinner2" />


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/convert"
        android:id="@+id/convert"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/result"
        android:hint="@string/result"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/insert"
        android:id="@+id/insert"/>



    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/the_list"/>
</LinearLayout>