<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ElectricCarChargingStationFinder">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:id="@+id/textView3"
            android:layout_gravity="center"
            android:textSize="50px"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/electric_car_charging_station_finder" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/input_here"
            />
        <EditText
            android:id="@+id/editTextLatitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/latitude" />

        <EditText
            android:id="@+id/editTextLongitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/longitude" />

        <Button
            android:id="@+id/btnFind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/find" />
    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>