<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        app:srcCompat="@drawable/helpdialog"
        android:layout_gravity="center"/>
    <TextView
        android:id="@+id/authorname"
        android:textSize="22dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/authorname"/>
    <TextView
        android:id="@+id/activityversionnumber"
        android:textSize="22dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activityversionnumber"/>

    <TextView
        android:id="@+id/instruction"
        android:textSize="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/instruction"/>




</LinearLayout>