<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity_luo">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/intruction"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/information" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/version"
            android:layout_alignParentBottom="true"/>
        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:src="@drawable/basketball"></ImageView>
    </RelativeLayout>
</LinearLayout>