<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/liao"
        android:adjustViewBounds="true"
        android:maxWidth="42dp"
        android:maxHeight="42dp"
        ></ImageView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/liao"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/qing"
        android:adjustViewBounds="true"
        android:maxWidth="42dp"
        android:maxHeight="42dp"
        ></ImageView>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/wang"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ye"
        android:adjustViewBounds="true"
        android:maxWidth="42dp"
        android:maxHeight="42dp"
        ></ImageView>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ye"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/yuan"
        android:adjustViewBounds="true"
        android:maxWidth="42dp"
        android:maxHeight="42dp"
        ></ImageView>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/luo"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        />




</LinearLayout>