<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity_recipe">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="220dp"

        android:src="@drawable/algonquin"></ImageView>
    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/Name" />



    <Button
        android:id="@+id/buttontostudentinformation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buttontostudentinformation" />
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:context=".MainActivity_recipe">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/liao"
            android:adjustViewBounds="true"
            android:maxWidth="42dp"
            android:maxHeight="42dp"
            ></ImageView>
        <Button
            android:id="@+id/newsapi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/newsapi" />

    </LinearLayout>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/qing"
            android:adjustViewBounds="true"
            android:maxWidth="42dp"
            android:maxHeight="42dp"
            ></ImageView>
        <Button
            android:id="@+id/currency"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/currencymain" />
    </LinearLayout>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:context=".MainActivity_recipe">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ye"
            android:adjustViewBounds="true"
            android:maxWidth="42dp"
            android:maxHeight="42dp"
            ></ImageView>
        <Button
            android:id="@+id/electricmain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/electricmain" />
    </LinearLayout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:context=".MainActivity_recipe">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/yuan"
            android:adjustViewBounds="true"
            android:maxWidth="42dp"
            android:maxHeight="42dp"
            ></ImageView>
        <Button
            android:id="@+id/logintorecipe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/logintorecipe" />
    </LinearLayout>


    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    </ListView>


</LinearLayout>